--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.5-lts.1",
     "randomstring": "^1.2.2"
   }
 }
