--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.2.9",
     "multer": "^1.4.5-lts.1",
     "randomstring": "^1.2.2"
